# bayes-continuous

./: README.md  backend.py  bayes.py  conjugate.py  frontend.py  frontend_params.py  likelihood_func.py  main.py  posterior.py  pyproject.toml  requirements.txt  setup.py  test_conjugate_normal.py  testing.py  todo.txt
bayes_continuous/: likelihood_func.py  posterior.py  utils.py
bayes_continuous/tests/: __init__.py  closed_form_beta_binomial.py  closed_form_normal_normal.py
static/: styles.css
templates/: _formhelpers.html  _google_analytics.html  _latex_macros.html  hw.html  index.html
test/: closed_form_beta_binomial.py  closed_form_normal_normal.py
