[tool.poetry]
name = "bayes_continuous"
version = "0.0.0"
description = ""
authors = ["tadamcz <tadamczewskipublic@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.12,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
pytest = "^7.1.1"
sortedcontainers = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
